--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Short stories'
 - !lcsh 'Schools -- Fiction'
 - !lcc 'PZ'
+- GITenberg
 title: Boycotted, and Other Stories
 url: http://www.gutenberg.org/ebooks/21039
